fix(jetbrains-vmoptions): ground tuning in actual runtime evidence
Identify the actual IDE boot runtime and target process instead of inferring JBR from the IDE version.
Correct GC compatibility guidance and replace generic fixed tuning values with evidence-based minimal deltas.

Add restart verification, rollback, and a controlled before/after performance procedure, and update the README description.

Validation: diff check, YAML frontmatter parsing, Markdown relative links, and stale recommendation scan.
IDE configuration changes and performance benchmarks were not run.